# sceneio

./: README.md  pixi.toml  pyproject.toml
experiments/: extract_from_rrd.py  extract_video_pose_from_rrd.py  remux_from_stream.py  sceneioTest.py  testFrameReference.py
sceneio/: __init__.py  api.py  rrd_io.py
sceneio/loaders/: __init__.py  stereo_dir.py
sceneio/models/: __init__.py  tables.py
tests/: conftest.py  test_api.py  test_rrd_io.py
tests/integration/: test_end_to_end_concept.py
tests/test_loaders/: test_stereo_dir.py
tests/test_models/: test_tables.py
